# name: TestPreview.test_preview
  <class 'dict'> {
    'birthDate': '2094-03-05',
    'deceasedDateTime': '2165-08-12',
    'gender': 'female',
    'id': '6140cc54-cd63-5ad9-b3f9-000649e5368f',
    'identifier': <class 'list'> [
      <class 'dict'> {
        'value': '9467 (1)',
      },
    ],
    'maritalStatus': <class 'dict'> {
      'coding': <class 'list'> [
        <class 'dict'> {
          'code': 'SEPARATED',
        },
      ],
    },
    'meta': <class 'dict'> {
      'tag': <class 'list'> [
        <class 'dict'> {
          'system': 'http://terminology.arkhn.org/CodeSystem/source',
        },
        <class 'dict'> {
          'system': 'http://terminology.arkhn.org/CodeSystem/resource',
        },
      ],
    },
    'resourceType': 'Patient',
  }
---
# name: TestPreview.test_preview_with_validation_error
  <class 'dict'> {
    'code': 'invalid',
    'diagnostics': 'shit happened',
    'severity': 'error',
  }
---
# name: TestPreview.test_preview_with_validation_exception
  <class 'dict'> {
    'code': '',
    'diagnostics': 'fhir-api-returned-an-internal-server-error',
    'severity': 'error',
  }
---
